// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarFieldSla Component should export select options: toolbarFieldOptions 1`] = `
[
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_usage, {"context":"Production"})",
    "value": "Production",
  },
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_usage, {"context":"Development/Test"})",
    "value": "Development/Test",
  },
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_usage, {"context":"Disaster Recovery"})",
    "value": "Disaster Recovery",
  },
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_usage, {"context":"none"})",
    "value": "",
  },
]
`;

exports[`ToolbarFieldSla Component should handle updating usage through redux state with component: dispatch, component 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "type": "SET_QUERY_RHSM_usage",
        "usage": "Production",
        "viewId": undefined,
      },
    ],
  ],
]
`;

exports[`ToolbarFieldSla Component should handle updating usage through redux state with hook: dispatch, hook 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": "loremIpsum",
      },
      {
        "type": "SET_QUERY_RHSM_usage",
        "usage": "dolor sit",
        "viewId": "loremIpsum",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldSla Component should render a basic component: basic 1`] = `
<Select
  aria-label="t(curiosity-toolbar.placeholder, {"context":"usage"})"
  ariaLabel="Select option"
  className=""
  data-test="toolbarFieldUsage"
  direction="down"
  id="generatedid-"
  isDisabled={false}
  isDropdownButton={false}
  isFlipEnabled={false}
  isInline={true}
  isToggleText={true}
  maxHeight={null}
  name={null}
  onSelect={[Function]}
  onSplitButton={[Function]}
  options={
    [
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_usage, {"context":"Production"})",
        "value": "Production",
      },
      {
        "selected": true,
        "title": "t(curiosity-toolbar.label_usage, {"context":"Development/Test"})",
        "value": "Development/Test",
      },
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_usage, {"context":"Disaster Recovery"})",
        "value": "Disaster Recovery",
      },
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_usage, {"context":"none"})",
        "value": "",
      },
    ]
  }
  placeholder="t(curiosity-toolbar.placeholder, {"context":"usage"})"
  position="left"
  selectedOptions="Development/Test"
  splitButtonVariant={null}
  toggleIcon={null}
  variant="single"
/>
`;
